# fmrimod

./: .gitignore  AGENTS.md  CITATION_HRF.cff  CLAUDE.md  GOVERNANCE.md  LICENSE  MISSION.md  Makefile  README.md  ROADMAP-0.8.md  ROADMAP-1.0.md  VISION.md  hatch_build.py  message_board.md  pyproject.toml  pytest.ini  test_sbhm_integration.py
.beads/: .gitignore  issues.jsonl
.beads/.br_history/: issues.20260216_225748.jsonl  issues.20260216_230220.jsonl  issues.20260216_231004.jsonl  issues.20260216_231132.jsonl  issues.20260216_231509.jsonl  issues.20260216_231826.jsonl  issues.20260217_002539.jsonl  issues.20260217_002927.jsonl  issues.20260217_015005.jsonl  issues.20260217_131641.jsonl
.github/ISSUE_TEMPLATE/: config.yml  ws01-design-matrix-construction-parity.md  ws02-contrast-engine-parity.md  ws03-variance-and-df-parity.md  ws04-run-combination-parity.md  ws05-censor-sample-mask-parity.md  ws06-lsa-lss-parity-performance.md  ws07-rank-deficient-design-behavior.md  ws08-numeric-precision-parity.md  ws09-residual-diagnostic-parity.md  ws10-performance-decomposition-parity.md
.github/workflows/: arma-benchmark-fallback.yml  arma-benchmark.yml  ci.yml  core-parity-matrix.yml  docs.yml  fitlins-benchmark.yml  release-0-8.yml
benchmarks/parity/: adversarial_schema.py  caveats_contract.py  proof_artifacts.json  release_1_0_bundle.py  release_1_0_manifest.json  verify_receipt.py
benchmarks/performance/: __init__.py  check_regression.py  group_reducer_fmrigds.py  parity_trends.py
cross_testing/: CROSS_TESTING_STRATEGY.md  DEMO_RESULTS.md  FITLINS_PARITY_CONTRACT.md  IMPLEMENTATION_SUMMARY.md  PRD_CORE_PARITY_AND_PERFORMANCE.md  README.md  __init__.py  benchmark_arma_paths.py  benchmark_core_parity_matrix.py  benchmark_fitlins.py  benchmark_fitlins_ar1.py  benchmark_fmrimod_levers.py  benchmark_lss_vs_nilearn.py  check_arma_benchmark_thresholds.py  check_fitlins_benchmark_contract.py  conftest.py  core_parity_matrix.py  create_workstream_issues.py  example_cross_test.py  fitlins_ar1_parity.py  fitlins_parity.py  generate_report.py  test_caveats_index.py  test_complex_scenarios.py  test_core_parity_matrix.py  test_fitlins_ar1_compatibility.py  test_fitlins_cli_derivative_parity.py  test_fitlins_parity.py  test_hrf_equivalence.py  test_lss_ar_parity.py  test_mock_equivalence.py  test_no_r_demo.py  test_parity_harness_canary.py  test_parity_performance_trends.py  test_parity_report_gate_semantics.py  test_performance.py  test_regressor_equivalence.py  test_second_level_parity.py  test_spm_auditory_parity.py  test_spm_derivative_basis_parity.py  (+4 more)
cross_testing/data/: generate_test_data.R
cross_testing/harness/: __init__.py  compare.py  fixtures.py  report.py
cross_testing/issue_templates/: WORKSTREAM_ISSUE_TEMPLATES.md
cross_testing/schemas/: core_parity_benchmark.schema.json
docs/: .gitignore  README.md  _quarto.yml  _quartodoc.yml  _variables-dark.scss  _variables.scss  get-started.qmd  index.qmd  objects.json  styles.css
docs/contracts/: CAVEATS.md  CAVEAT_RETIREMENTS.md  CONTRACT_AUDIT.md  adversarial_benchmark_report_schema_v1.md  api_inventory_v1.json  compat_retirement_inventory_v1.md  contract_doc_audit.md  fitlins_nilearn_overlap_v1.md  fmriar_parity_audit_v1.md  fmridataset_consolidation_plan_v1.md  fmridesign_design_formula_typed_seam_v1.md  fmridesign_test_surface_v1.md  fmrihrf_test_port_audit_v1.md  fmrilss_test_surface_v1.md  fmrireg_test_surface_v1.md  group_hdf5_alignment_manifest_v1.md  group_lmm_native_v1.md  group_reducer_concurrency_v1.md  internal_any_audit.json  not_implemented_audit_v1.md  parametric_contrast_sugar_v1.md  parity_tolerance_audit_v1.json  public_api_policy_v1.md  scoped_vs_strict_gap_v1.md  second_level_parity_v1.md  trio_api_inventory_v1.md  trio_completion_audit_v1.md  trio_pending_api_workplan_v1.md  trio_port_goal_v1.md  trio_public_api_policy_v1.md  trio_verification_transcript_v1.md  (+1 more)
examples/: first_trust_contrast.py  typed_multirun_demo.py
fmridataset/: README.md  __init__.py  _version.py  backend_constructors.py  backend_methods.py  backend_protocol.py  backend_registry.py  bids_h5_dataset.py  bids_h5_write.py  data_access.py  data_chunks.py  dataset.py  dataset_constructors.py  dataset_methods.py  errors.py  fmri_series.py  latent_dataset.py  mask_utils.py  sampling_frame.py  selectors.py  study_dataset.py
fmrimod/: __init__.py  _warnings.py  accessors.py  afni.py  base.py  cli.py  condition_basis.py  convolve.py  convolve_design.py  covariate.py  design_colmap.py  dispatch.py  extension_registry.py  hrf.py  hrf_dispatch.py  hrf_integration.py  naming.py  plotting.py  regressors.py  residualize.py  sampling.py  trialwise.py  types.py  validate.py
golden_tests/: .golden_sync.json  GOLDEN_TESTS.md  SCHEMA_PREVENTION.md  golden_test_results_python_20250711_073502.json  golden_test_results_python_20250711_073503.json
scripts/: api_inventory.py  manifest_row.py  mote_new.py  parity_artifact.py  tolerance_audit.py
tests/: __init__.py  conftest.py  test_accessors.py  test_flagship_seam_smoke.py  test_import_cycles.py  test_import_order_regression.py  test_namespace_import_story.py  test_pytest_config.py  test_reproducibility.py  test_ruff_static_checks.py  test_type_hints_resolution.py
(+704 files in other folders)
